--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,56 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
+yarn-error.log
+yarn-debug.log
+npm-debug.log
 
-# testing
-/coverage
-
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
-/build
+# Environment variables
+.env
+.env*.local
+.env.production
+.env.development
+# Exclude all .env files except .env.example
+!/.env.example
+!/src/.env.example
 
-# misc
+# Test results
+/coverage
+/test-results
+
+# Local IDE settings
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/launch.json
+
+# Mac system files
 .DS_Store
-*.pem
+._*
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Logs
+logs
+*.log
 
-# vercel
-.vercel
+# Temporary files
+*.swp
+*~
+*.bak
+*.tmp
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.genkit/*
-.env*
-
-# firebase
+# Firebase
+*.firebase.*
+!.firebaserc
 firebase-debug.log
-firestore-debug.log
+
+# Misc
+*.pem
+*.tgz
